<resources>
    <string name="app_name">图片工具</string>
    <string name="navigation_drawer_open">打开菜单</string>
    <string name="navigation_drawer_close">关闭菜单</string>
    <string name="nav_header_title">图片工具</string>
    <string name="nav_header_subtitle">XTER</string>
    <string name="nav_header_desc">分个组多好</string>
    <string name="action_settings">设置</string>

    <string name="menu_dir">相册</string>
    <string name="menu_brower">浏览</string>
    <string name="menu_detail">详情</string>
    <string name="menu_group">分组</string>
    <string name="menu_about">关于</string>

    <string name="permission_storage">需要读写存储权限</string>
    <string name="permission_storage_denied">读写存储权限未授予</string>
    <string name="permission_storage_never_ask">读写存储权限不再询问</string>

    <string name="action_multi_select">多选</string>

    <string name="action_sort">排序</string>
    <string name="action_sort_name">名称</string>
    <string name="action_sort_path">路径</string>
    <string name="action_sort_time">时间</string>
    <string name="action_sort_size">大小</string>

    <string name="action_layout">布局方式</string>
    <string name="action_layout_default">默认</string>
    <string name="action_layout_grid">网格</string>
    <string name="action_layout_stack">层叠</string>
    <string name="action_layout_list">列表</string>

    <string name="action_grid_rows">网格行数</string>
    <string name="action_grid_columns">网格列数</string>
    <string name="action_grid_rows_add">增加一列</string>
    <string name="action_grid_rows_sub">减少一列</string>

    <string name="action_grid_style">网格样式</string>
    <string name="img_desc_cover">封面</string>
    <string name="img_desc_content">图片</string>
    <string name="img_desc_detail">详情</string>

    <string name="desc_info">信息</string>
    <string name="desc_share">分享</string>
    <string name="desc_more">更多</string>

    <string name="desc_copy">复制</string>
    <string name="desc_delete">删除</string>
    <string name="desc_move">移动</string>
    <string name="desc_rename">重命名</string>

    <string name="text_count_default">0</string>
    <string name="text_default_folder">pic</string>

    <string name="title">标题</string>
    <string name="type">类型</string>
    <string name="time">时间</string>
    <string name="size">大小</string>
    <string name="dimension">尺寸</string>
    <string name="path">路径</string>
    <string name="location">位置</string>
    <string name="manufacturer">制造商</string>
    <string name="model">模型</string>
    <string name="flashlight">闪光灯</string>
    <string name="focus">焦距</string>
    <string name="white_balance">白平衡</string>
    <string name="aperture">光圈</string>
    <string name="exposure">曝光</string>
    <string name="iso">ISO</string>
    <string name="altitude">海拔</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="create">新建</string>
    <string name="create_group">新建分组</string>
    <string name="delete_group">删除分组</string>

    <string name="appearence">外观</string>
    <string name="pre_include_video">包含视频文件</string>
    <string name="pre_include_gif">包含动态图片</string>
    <string name="pre_include_video_hint">是否显示视频文件</string>
    <string name="pre_include_gif_hint">是否显示动态图片</string>
    <string name="pre_filter_min_size">过滤文件大小</string>
    <string name="pre_font_size">字体大小</string>
    <string name="pre_font_color">字体颜色</string>
    <string name="pre_font">字体</string>

    <string name="pre_dir_style">目录视图</string>
    <string name="pre_group_style">分组视图</string>
    <string name="pre_stack_num">层叠数量</string>
    <string name="pre_view">视图</string>


</resources>