<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sure"
        android:orderInCategory="100"
        android:title="@string/sure"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        android:title="@string/cancel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        app:showAsAction="never" >
        <menu>
            <item android:title="@string/action_sort_name" android:id="@+id/action_sort_name"/>
            <item android:title="@string/action_sort_path" android:id="@+id/action_sort_path"/>
            <item android:title="@string/action_sort_time" android:id="@+id/action_sort_time"/>
            <item android:title="@string/action_sort_size" android:id="@+id/action_sort_size"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_layout"
        android:orderInCategory="100"
        android:title="@string/action_layout"
        app:showAsAction="never" >
        <menu>
            <item android:title="@string/action_layout_default" android:id="@+id/action_layout_default"/>
            <item android:title="@string/action_layout_grid" android:id="@+id/action_layout_grid"/>
            <item android:title="@string/action_layout_stack" android:id="@+id/action_layout_stack"/>
            <item android:title="@string/action_layout_list" android:id="@+id/action_layout_list"/>
        </menu>
    </item>
</menu>