<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/desc_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/desc_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rename"
        android:orderInCategory="100"
        android:title="@string/desc_rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_detail"
        android:orderInCategory="100"
        android:title="@string/desc_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:title="@string/desc_more"
        app:showAsAction="never">
        <menu>
            <item android:title="@string/desc_copy" android:id="@+id/action_copy"/>
            <item android:title="@string/desc_move" android:id="@+id/action_move"/>
        </menu>
    </item>
</menu>