<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:padding="10dp"
    android:orientation="horizontal"
    android:rowCount="6">

    <TextView
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="center_vertical|end"
        android:text="@string/title" />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:gravity="center_vertical|start"
        android:text="@string/title" />

    <TextView
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="center_vertical|end"
        android:text="@string/type" />

    <TextView
        android:id="@+id/tv_detail_type"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:gravity="center_vertical|start"
        android:text="@string/type" />

    <TextView
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="center_vertical|end"
        android:text="@string/dimension" />

    <TextView
        android:id="@+id/tv_detail_dimension"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:gravity="center_vertical|start"
        android:text="@string/dimension" />

    <TextView
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="center_vertical|end"
        android:text="@string/size" />

    <TextView
        android:id="@+id/tv_detail_size"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:gravity="center_vertical|start"
        android:text="@string/size" />

    <TextView
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="center_vertical|end"
        android:text="@string/time" />

    <TextView
        android:id="@+id/tv_detail_time"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:gravity="center_vertical|start"
        android:text="@string/time" />

    <TextView
        android:layout_row="5"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="center_vertical|end"
        android:text="@string/path" />

    <TextView
        android:id="@+id/tv_detail_path"
        android:layout_row="5"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:gravity="center_vertical|start"
        android:text="@string/path" />
</GridLayout>